#142. Fixed section upsell not showing. Changed strings. Removed hestia references. Removed PRO label as string and added it from CSS. Removed redundant css file. Moved require statements to functions.php and made them conditional so it won't throw errors.

--- a/inc/customize-pro/css/style.css
+++ b/inc/customize-pro/css/style.css
@@ -67,3 +67,7 @@
 #customize-controls #accordion-section-llorix_one_lite_theme_info_main_section.control-section .accordion-section-title:hover:after {
     color: #fff;
 }
+
+.upsell-pro-label:before {
+    content: "pro";
+}
